# foxtrot

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Meta.conf  PreprocResult_Pixel.hlsl  PreprocResult_Vertex.hlsl  README.md  compile_commands.json  gpass_Fragment.hlsl  gpass_Vertex.hlsl  macos_debug_sign.sh  premake5.lua
Src/: AnimationManager.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Controls.cpp  Controls.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  FoxtrotGame.cpp  FoxtrotGame.hpp  FxAnimationManager.cpp  FxAnimationManager.hpp  FxColor.cpp  FxColor.hpp  FxControls.cpp  FxControls.hpp  FxEngine.cpp  FxEngine.hpp  FxEntity.cpp  FxEntity.hpp  FxMaterial.cpp  FxMaterial.hpp  FxObject.cpp  FxObject.hpp  FxObject2.hpp  FxObjectLayer.hpp  FxObjectManager.cpp  FxObjectManager.hpp  FxPhysicsJolt.cpp  FxPhysicsJolt.hpp  FxPhysicsObject.cpp  FxPhysicsObject.hpp  FxPlayer.cpp  FxPlayer.hpp  FxScene.cpp  FxScene.hpp  Main.cpp  Material.cpp  (+14 more)
Src/Asset/: Animation.cpp  Animation.hpp  AssetBase.hpp  AssetDef.hpp  AssetManager.cpp  AssetManager.hpp  AssetManagerFwd.cpp  AssetManagerFwd.hpp  AssetObject.hpp  AssetTicket.hpp  AxBase.hpp  AxBase_OLD.hpp  AxImage.cpp  AxImage.hpp  AxManager.cpp  AxManager.hpp  AxManagerFwd.cpp  AxManagerFwd.hpp  AxPaths.cpp  AxPaths.hpp  AxQueue.hpp  AxQueueItem.hpp  AxShader.hpp  ConfigFile.cpp  ConfigFile.hpp  DataPack.cpp  DataPack.hpp  FxAnimation.cpp  FxAnimation.hpp  FxAssetBase.hpp  FxAssetImage.cpp  FxAssetImage.hpp  FxAssetManager.cpp  FxAssetManager.hpp  FxAssetModel.cpp  FxAssetModel.hpp  FxAssetPaths.cpp  FxAssetPaths.hpp  FxAssetQueueItem.hpp  FxAssetShader.hpp  (+30 more)
Src/Asset/Font/: Font.cpp  Font.hpp
Src/Asset/Fwd/: Ax_Fwd_Definitions.cpp  Ax_Fwd_Manager.hpp  Fx_Fwd_AssetManager.hpp  Fx_Fwd_Definitions.cpp
Src/Asset/Loader/: AxLoaderBase.hpp  AxLoaderGltf.cpp  AxLoaderGltf.hpp  AxLoaderImageBase.hpp  AxLoaderJpeg.cpp  AxLoaderJpeg.hpp  AxLoaderSlang.cpp  AxLoaderSlang.hpp  AxLoaderStb.cpp  AxLoaderStb.hpp  FxBaseLoader.hpp  FxGltfLoader.cpp  FxGltfLoader.hpp  FxJpegLoader.cpp  FxJpegLoader.hpp  FxLoaderBase.hpp  FxLoaderGltf.cpp  FxLoaderGltf.hpp  FxLoaderImageBase.hpp  FxLoaderJpeg.cpp  (+9 more)
Src/Core/: Allocator.cpp  Allocator.hpp  AnonArray.cpp  AnonArray.hpp  ArrayUtil.hpp  Assert.cpp  Assert.hpp  BasicDb.cpp  BasicDb.hpp  BitUtil.hpp  Bitset.cpp  Bitset.hpp  Bitset.inl  ByteBuffer.cpp  ByteBuffer.hpp  DataNotifier.cpp  DataNotifier.hpp  Defer.hpp  Defines.hpp  DynArray.hpp  File.cpp  File.hpp  FilesystemIO.cpp  FilesystemIO.hpp  FreeArray.hpp  FxAllocator.hpp  FxAnonArray.cpp  FxAnonArray.hpp  FxBasicDb.cpp  FxBasicDb.hpp  FxBitUtil.hpp  FxBitset.cpp  FxBitset.hpp  FxBitset.inl  FxDataNotifier.hpp  FxDefer.hpp  FxDefines.hpp  FxDynArray.hpp  FxFile.cpp  FxFile.hpp  (+65 more)
Src/Material/: Material.cpp  Material.hpp  MaterialID.hpp  MaterialManager.cpp  MaterialManager.hpp  MaterialManagerFwd.cpp  MaterialManagerFwd.hpp
Src/Math/: BoundingBox.cpp  BoundingBox.hpp  FxAVXUtil.hpp  FxBoundingBox.hpp  FxMat4.hpp  FxMathConsts.hpp  FxMathUtil.cpp  FxMathUtil.hpp  FxMathUtil.inl  FxNeonUtil.cpp  FxNeonUtil.hpp  FxQuat.hpp  FxSSE.hpp  FxSSEUtil.cpp  FxSSEUtil.hpp  FxVec2.hpp  FxVec3.hpp  FxVec4.hpp  Mat4.hpp  MathConsts.hpp  MathUtil.cpp  MathUtil.hpp  MathUtil.inl  NeonUtil.cpp  NeonUtil.hpp  Quat.hpp  SSE.hpp  SSEUtil.cpp  SSEUtil.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  Vector.hpp
Src/Object/: Object.cpp  Object.hpp  ObjectID.hpp  ObjectLayer.hpp  ObjectManager.cpp  ObjectManager.hpp
Src/Physics/: FxPhysicsCharacter.hpp  FxPhysicsJolt.cpp  FxPhysicsJolt.hpp  FxPhysicsObject.cpp  FxPhysicsObject.hpp  FxPhysicsPlayer.cpp  FxPhysicsPlayer.hpp  PhJolt.cpp  PhJolt.hpp  PhMesh.cpp  PhMesh.hpp  PhObject.cpp  PhObject.hpp  PhPlayer.cpp  PhPlayer.hpp
Src/Renderer/: Attachment.cpp  Attachment.hpp  Camera.cpp  Camera.hpp  CommandManager.cpp  CommandManager.hpp  Constants.hpp  Deferred.cpp  Deferred.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  DeletionObject.hpp  FxCamera.cpp  FxCamera.hpp  FxDeferred.cpp  FxDeferred.hpp  FxDeletionObject.hpp  FxLight.cpp  FxLight.hpp  FxMesh.cpp  FxMesh.hpp  FxMeshUtil.hpp  FxPrimitiveMesh.hpp  FxRenderBackend.cpp  FxRenderBackend.hpp  FxWindow.cpp  FxWindow.hpp  Globals.cpp  Globals.hpp  Light.cpp  Light.hpp  Limits.hpp  MeshUtil.hpp  PSOBuild.cpp  PSOBuild.hpp  PipelineBuilder.hpp  PipelineCache.cpp  PipelineCache.hpp  PipelineList.hpp  PipelineNames.hpp  (+65 more)
Src/Script/: BytecodeCompiler.cpp  BytecodeCompiler.hpp  BytecodeEmitter.cpp  BytecodeEmitter.hpp  FoxAst.cpp  FoxAst.hpp  FoxBytecode.hpp  FoxBytecodeCompiler.cpp  FoxBytecodeCompiler.hpp  FoxObjectInterop.cpp  FoxObjectInterop.hpp  FoxParser.cpp  FoxParser.hpp  FoxScript.cpp  FoxScript.hpp  FoxVM.cpp  FoxVM.hpp  FoxValue.cpp  FoxValue.hpp  FoxVariable.hpp  FxScript.cpp  FxScript.hpp  FxScriptBytecode.hpp  Script.cpp  Script.hpp  ScriptAst.cpp  ScriptAst.hpp  ScriptBytecode.hpp  ScriptParser.cpp  ScriptParser.hpp  ScriptVM.cpp  ScriptVM.hpp  ScriptVar.hpp
Src/Texture/: TextureID.hpp  TextureManager.cpp  TextureManager.hpp
Src/Util/: FxKey.hpp  FxTokenizer.cpp  FxTokenizer.hpp  Key.hpp  Tokenizer.cpp  Tokenizer.hpp
src/: CMakeLists.txt  FxControls.cpp  FxControls.hpp  FxEntity.cpp  FxEntity.hpp  FxMaterial.cpp  FxMaterial.hpp  Main.cpp
src/Asset/: FxAssetManager.cpp  FxAssetManager.hpp  FxAssetQueue.hpp  FxAssetQueueItem.hpp  FxBaseAsset.hpp  FxConfigFile.cpp  FxConfigFile.hpp  FxImage.hpp  FxModel.cpp  FxModel.hpp
src/Backend/: RenderBackend.hpp  RenderPanic.hpp  Vulkan.cpp  Vulkan.hpp
src/Core/: Defines.hpp  FxAllocator.hpp  FxDataNotifier.hpp  FxHash.cpp  FxHash.hpp  FxLinkedList.hpp  FxMemPool.cpp  FxMemPool.hpp  FxPagedArray.hpp  FxPanic.hpp  FxRef.hpp  FxSizedArray.hpp  FxStackArray.hpp  FxStaticArray.hpp  FxStaticPtrArray.hpp  FxString.hpp  Log.hpp  StaticArray.hpp  StaticPtrArray.hpp  Types.hpp  Util.hpp
src/Math/: Mat4.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  Vector.hpp
src/Renderer/: FxCamera.hpp  FxMesh.hpp  FxRenderBackend.cpp  FxRenderBackend.hpp  FxWindow.hpp  Renderer.cpp  Renderer.hpp
src/Util/: FxKey.hpp  FxTokenizer.hpp  Log.hpp
(+512 files in other folders)
